# django-satispaython

./: .gitignore  README.md  pyproject.toml
django_satispaython/: _core.py  admin.py  api.py  apps.py  exceptions.py  models.py
django_satispaython/migrations/: 0001_initial.py
django_satispaython/templates/django_satispaython/: satispay_button.html
django_satispaython/templatetags/: django_satispaython.py
tests/: manage.py  requirements_test.txt
tests/tests/: settings.py  test_core.py  urls.py
